person-card enter opening

--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -99,6 +99,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
       align-items: center;
       max-width: 120px;
       margin-top: 16px;
+      margin-left: 79px;
 
       .icon {
         display: flex;
