updated names to match

--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -181,7 +181,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
           max-width: var(--mgt-flyout-set-width, 375px);
           min-width: var(--mgt-flyout-set-width, 360px);
         }
-        .overviewPanel {
+        .overview-panel {
           max-width: var(--mgt-flyout-set-width, 375px);
         }
         &::-webkit-scrollbar {
