--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -64,10 +64,10 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
       z-index: 1;
       --accent-foreground-hover: none;
       border: 1px solid transparent;
-      &:focus-visible {
-        outline: none;
-        border: 1px solid #2b2b2b;
-      }
+      // &:focus-visible {
+      //   outline: none;
+      //   border: 1px solid #2b2b2b;
+      // }
       svg {
         width: 9px;
         height: 9px;
