keyboard control and selected state

--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -33,6 +33,9 @@
       &:hover {
         background-color: $dropdown-item__background-color--hover;
       }
+      &.selected {
+        background-color: set-var(dropdown-item__background-color--selected, $theme-default, $channel-picker);
+      }
     }
   }
 
