fixing open close chevron

--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -186,6 +186,9 @@
     background-color: $input__background-color;
     font-size: 10px;
     font-weight: bold;
+    &.chevron {
+      top: 12px;
+    }
     &:hover {
       color: $color;
     }
