--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -34,7 +34,8 @@
         background-color: $dropdown-item__background-color--hover;
       }
       &.selected {
-        background-color: set-var(dropdown-item__background-color--selected, $theme-default, $channel-picker);
+        --neutral-fill-stealth-rest: #edebf7;
+        --neutral-fill-stealth-hover: #edebf7;
       }
     }
   }
