editing person-card contact links to meet accesibility standards

--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -94,11 +94,11 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
 
         span {
           margin-left: 8px;
-          color: $commblue_primary;
+          color: #023B8F;
         }
       }
       .icon:hover {
-        color: $commblue_shade20;
+        color: #012E7F;
       }
     }
   }
