Add ac11y support for the p-picker to narrate selected people

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -53,6 +53,10 @@ mgt-people-picker .root {
     font-weight: normal;
     overflow: hidden;
 
+    &__options {
+      display: contents;
+    }
+
     &__person-wrapper {
       display: flex;
       margin: 0 5px 6px 0;
