removes calendar dropdown from tasks for accessibility

--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -26,6 +26,13 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
   padding: var(--tasks-padding, 12px);
   color: $color;
 
+  input[type='date']::-webkit-inner-spin-button,
+  input[type='date']::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+  }
+
+
   .TaskIcon {
     font-family: 'FabricMDL2Icons';
     user-select: none;
