--- a/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -27,6 +27,7 @@
     z-index: 9999999;
     opacity: 0;
     box-shadow: set-var(box-shadow, $theme-default, $common);
+    border-radius: 8px;
   }
 
   &.visible {
