--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
@@ -40,6 +40,7 @@ mgt-agenda .event {
   margin: var(--event-margin, 0px 10px 14px 10px);
   padding: var(--event-padding, 0px);
   display: flex;
+  border-radius: 8px;
 }
 
 :host .narrow .event,
